Modifyed css rule and fixing navbar to fix hambuger menu not showing up (min menu).

--- a/bootstrap/modify-css/modify.css
+++ b/bootstrap/modify-css/modify.css
@@ -1,12 +1,6 @@
 /* Media Quries*/
 @media (max-width: 576px) 
 {  
-	.badge-fix
-	{
-		white-space: normal;
-		font-size: .8em;
-	}
-
 	.h1
 	{
 		word-wrap: break-word;
@@ -18,21 +12,8 @@
 	}
 }
 
-/* Remove the navbar's default margin-bottom and rounded borders */ 
-.navbar {
-	margin-bottom: 0;
-	border-radius: 0;
-}
-			
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {height: 450px}
-		
-/* Set gray background color and 100% height */
-.sidenav {
-	padding-top: 20px;
-	background-color: #f1f1f1;
-	height: 100%;
-}
 			
 /* Set black background color, white text and some padding */
 footer {
@@ -48,17 +29,8 @@ footer {
 	background-size: cover;      
 }
 
-.jumbotron p{
-	color: black;
-}
-
-.jumbotron .label
-{
-	color:red;
-}
-
 h2, h3{
-	margin: 0px 0px 20px 0px;
+	padding: 20px 0;
 }
 
 .card-img-top{
